# dpgconv-py3

./: .gitignore  README.md  dpgconv.py  pyproject.toml
src/dpgconv/: dpgconv.py
